<resources>
    <string name="app_name">GTrack &amp; Trace</string>
    <string name="app_desc">Material Tracking</string>
    <string name="btn_login">Login</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_linde_login">Login With Linde Account</string>
    <string name="hint_forgot_password">Forgot Password ?</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_project">Project</string>
    <string name="title_site">Site</string>
    <string name="assign_qr_to">Assign QR To</string>
    <string name="assign_qr_to_material_code">Assign QR\nto\nMaterial Code</string>
    <string name="assign_qr_to_rfid">Assign QR\nto\nRFID</string>
    <string name="assign_qr_to_iot_code">Assign QR\nto\nIOT Code</string>
    <string name="material_code">Material Code</string>
    <string name="rfid">RFID</string>
    <string name="rfid_code">RFID Code</string>
    <string name="iot_code">IOT Code</string>
    <string name="assign_qr">Assign QR</string>
    <string name="unassign_qr">DeAssign QR</string>
    <string name="search_material">Material Details</string>
    <string name="track_material">Track Material</string>
    <string name="user">User</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="scan_qr_here">Scan QR Here</string>
    <string name="btn_assign_qr">Assign QR</string>
    <string name="btn_fetch_details">Fetch Details</string>
    <string name="btn_start_scan">Start Scan</string>
    <string name="title_iot_code">IOT Code</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="open_action">Open</string>
    <string name="ok_action">OK</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
    <string name="logout_msg">Do you want to exit?</string>
    <string name="loading">Loading...</string>
    <string name="error_message">Error! Something went wrong</string>
    <string name="error_username">Please enter the username</string>
    <string name="error_password">Please enter the password</string>
    <string name="error_project">Please select the project</string>
    <string name="error_site">Please select the site</string>
    <string name="error_qrcode">Please scan or enter the QRCode</string>
    <string name="powered_by">Powered By</string>
    <string name="no_material_code">No Material Code Found</string>
    <string name="btn_scan_RFID">Scan RFID</string>
    <string name="assign_RFID">Assign QR to RFID</string>
    <string name="total_item">Total Item: </string>
</resources>