<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_140dp"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/margin_big"
    android:paddingTop="@dimen/margin_big"
    android:paddingRight="@dimen/margin_big">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_nav_profile"
        android:layout_width="@dimen/height_100dp"
        android:layout_height="@dimen/height_100dp"
        android:background="@drawable/circle_profile_bg"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_userinfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_big"
        app:layout_constraintStart_toEndOf="@id/iv_nav_profile"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            style="@style/AuthHeaderTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_project"
            style="@style/AppBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_project" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_site"
            style="@style/NavSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_site" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>