<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AuthHeaderTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/size_back_button"
                    android:paddingBottom="@dimen/width_124dp"
                    android:text="@string/app_name"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="@dimen/app_button_radius"
                app:cardElevation="@dimen/margin_large"
                app:layout_constraintBottom_toBottomOf="@+id/login_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/screen_internal_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/AuthHeaderLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:gravity="center"
                        android:text="@string/title_forgot_password"
                        app:layout_constraintBottom_toTopOf="@id/til_email"
                        app:layout_constraintVertical_bias="1.0" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/input_field_radius"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/grey_100"
                        app:boxBackgroundColor="@color/colorSecondary"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/input_field_radius"
                        app:boxCornerRadiusBottomStart="@dimen/input_field_radius"
                        app:boxCornerRadiusTopEnd="@dimen/input_field_radius"
                        app:boxCornerRadiusTopStart="@dimen/input_field_radius"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="@dimen/divider_width"
                        app:cursorColor="@color/colorPrimary"
                        app:hintTextColor="@color/colorPrimary"
                        app:layout_constraintBottom_toTopOf="@id/til_email"
                        app:startIconDrawable="@android:drawable/ic_dialog_email"
                        app:startIconTint="@color/colorBlack">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_email"
                            style="@style/smallText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:maxLines="1"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:theme="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        style="@style/AppButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_large"
                        android:gravity="center"
                        android:padding="@dimen/input_field_radius"
                        android:text="@string/btn_submit"
                        app:layout_constraintTop_toBottomOf="@id/til_email"
                        app:layout_constraintVertical_bias="1.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
