<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/app_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search_material_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/material_code"
                android:padding="@dimen/screen_internal_padding"
                android:textColorHint="@color/grey_100"
                app:boxBackgroundColor="@color/colorSecondary"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/input_field_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_field_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_field_radius"
                app:boxCornerRadiusTopStart="@dimen/input_field_radius"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="@dimen/divider_width"
                app:cursorColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/colorBlack">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_search_material_code"
                    style="@style/smallText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="start"
                    android:theme="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/input_field_radius"
                app:layout_constraintTop_toBottomOf="@+id/til_search_material_code"
                app:layout_constraintVertical_bias="1.0">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start"
                    style="@style/AppButtonGrey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/start" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_stop"
                    style="@style/AppButtonGrey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/stop" />
            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible"
                android:paddingBottom="50dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
